fixed title spacing and mid image

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -144,6 +144,7 @@ body p {
 body .middle-img {
 	padding-top: 5%;
 	padding-bottom: 5%;
+	width: 90%;
 }
 
 body #IDXX {
